BVH worked, CBR failed